--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,10 +5,11 @@ android {
     buildToolsVersion "26.0.1"
     defaultConfig {
         applicationId "com.example.vaibhavchellani.noqueue"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
@@ -34,6 +35,7 @@ dependencies {
     compile 'com.google.firebase:firebase-crash:11.2.0'
     compile 'com.google.firebase:firebase-database:11.2.0'
     compile 'com.google.firebase:firebase-messaging:11.2.0'
+    compile 'com.firebaseui:firebase-ui-auth:2.0.1'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
